# lovekuhnya-tenant-crm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_12_02_2245-e5c228889acc_initial.py  2025_12_02_2307-1460a34e3066_initial.py
scripts/: smoke_test.sh
src/: __init__.py  admin.py  main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py  activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
src/application/: __init__.py  ports.py
src/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  security.py
src/domain/: __init__.py  deal_rules.py  enums.py  organization_rules.py  task_rules.py
src/infrastructure/: __init__.py
src/interface/: __init__.py
src/models/: __init__.py  auth.py  crm.py  enums.py
src/repositories/: __init__.py  activity.py  base.py  contact.py  deal.py  organization.py  task.py  user.py
src/schemas/: __init__.py  activity.py  analytics.py  auth.py  common.py  contact.py  deal.py  organization.py  task.py
src/scripts/: seed.py  wait_for_db.py
src/services/: __init__.py  activity.py  analytics.py  auth.py  contact.py  deal.py  organization.py  task.py
tests/: conftest.py  test_auth.py  test_deals.py  test_integration.py  test_tasks.py
