[project]
name = "lovekuhnya-tenant-crm"
version = "0.1.0"
description = "LoveKuhnya Tenant CRM - multi-tenant mini-CRM backend (Senior Python test assignment)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.20",
    "sqladmin>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.6",
    "mypy>=1.19.0",
]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "alembic/versions",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP046",  # Generic[T] is fine, don't force new syntax
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # re-exports are intentional
"tests/*" = ["E712"]  # == True/False is fine in tests for clarity
"src/api/*" = ["B904"]  # HTTPException doesn't need chaining
"src/models/*" = ["F821", "UP037"]  # forward references in SQLAlchemy relationships
"src/repositories/*" = ["E712"]  # SQLAlchemy == False is not Python bool

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/scripts/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
